--- a/ecommerce/main/templates/main/base.html
+++ b/ecommerce/main/templates/main/base.html
@@ -152,7 +152,7 @@
                             </div>
                             <div class="col-4">
                                 <div class="logo-block">
-                                    <a href="index.html"> <img src="{% static 'main/images/layout-4/logo/ostromi2.png' %}" alt="logo" class="img-fluid  "> </a>
+                                    <a href="{% url 'main' %}"> <img src="{% static 'main/images/layout-4/logo/ostromi2.png' %}" alt="logo" class="img-fluid  "> </a>
                                 </div>
                             </div>
                             <div class="col-4">
@@ -252,7 +252,7 @@
                                             <i class="fa fa-bars"></i>
                                         </div>
                                         <div class="logo-block logo-sm-center ">
-                                            <a href="index.html">
+                                            <a href="{% url 'main' %}">
                                                 <img src="{% static 'main/images/layout-4/logo/ostromi2.png' %}" alt="logo" class="img-fluid  ">
                                             </a>
                                         </div>
